Made several changes to get test working on Travis CI again. A change from Travis cause the Maven repo to be moved, so it must manually be deleted in order for some tests to pass. It also injects an Xmn setting to a JDK8 test that causes a warning to be printed to STD_ERR. We can't overcome that, so we just account for it.